# lua-sandbox

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.h  main.c  package.sh  start.sh
.github/workflows/: automation.yml
debug_server/: debug_server.c  debug_server.h
debug_server/htdocs/: index.html
hal/: evdev.c  evdev.h  lv_conf.h
ipk/: flappy-bird_0.0.1_pigeon-glasses.ipk  lua-sandbox_0.0.1_pigeon-glasses.ipk
ipk/flappy-bird/: Makefile
ipk/flappy-bird/control/: control  postinst  preinst  prerm
ipk/flappy-bird/data/opt/etc/dinit.d/: flappy-bird
ipk/flappy-bird/data/opt/share/applications/: flappy-bird.desktop
ipk/lua-sandbox/: Makefile
ipk/lua-sandbox/control/: control  preinst  prerm
ipk/lua-sandbox/data/opt/etc/dinit.d/: lua-sandbox
ipk/lua-sandbox/data/opt/share/applications/: lua-sandbox.desktop
libshims/: CMakeLists.txt  duml_hal.c
scripts/: index.lua
scripts/examples/: animation.lua  index.lua  tests.lua  tmp.txt
scripts/flappy-bird/: index.lua
utils/: screenshot.c  screenshot.h
